<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BAF4F2"

    tools:context=".LevelOne">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="460dp" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/_6"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/checkBox7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/checkBox5"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toEndOf="@+id/checkBox3"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkBox21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/_21"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/checkBox20"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkBox14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/_14"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/checkBox13"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="45dp"
        android:layout_height="48dp"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toEndOf="@+id/checkBox1"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkBox11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_11"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintStart_toEndOf="@+id/checkBox10"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toEndOf="@+id/checkBox2"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkBox10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintStart_toEndOf="@+id/checkBox9"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkBox13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_13"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintStart_toEndOf="@+id/checkBox12"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkBox16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_16"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toEndOf="@+id/checkBox15"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkBox9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintStart_toEndOf="@+id/checkBox8"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkBox18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_18"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toEndOf="@+id/checkBox17"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkBox20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toEndOf="@+id/checkBox19"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkBox19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_19"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toEndOf="@+id/checkBox18"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkBox12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_12"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintStart_toEndOf="@+id/checkBox11"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkBox17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_17"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toEndOf="@+id/checkBox16"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/_8"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkBox15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/_15"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toEndOf="@+id/checkBox4"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/levelOneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/level_one_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/LevelOneDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/LevelOneDescription"
        android:layout_width="366dp"
        android:layout_height="68dp"
        android:layout_marginBottom="32dp"
        android:text="@string/level_one_description"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="155dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="360dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="560dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="660dp" />

</androidx.constraintlayout.widget.ConstraintLayout>