<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ACA7B8"
    tools:context=".Login">

    <TextView
        android:id="@+id/loginActivityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginActivityText"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <EditText
        android:id="@+id/loginEditTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20sp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367"
        android:autofillHints="" />

    <EditText
        android:id="@+id/loginEditTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"

        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/enter_password"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.448"
        android:autofillHints="" />

    <Button
        android:id="@+id/loginToDashboard"
        android:layout_width="155dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:text="@string/loginActivityButton"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rememberMeBox"
        app:layout_constraintVertical_bias="0.052" />

    <CheckBox
        android:id="@+id/rememberMeBox"
        android:layout_width="154dp"
        android:layout_height="23dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/loginCheckbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.389"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEditTextPassword"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/loginSignupButton"
        android:layout_width="228dp"
        android:layout_height="43dp"
        android:text="@string/loginActivitySignup"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginToDashboard"
        app:layout_constraintVertical_bias="0.695" />

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_forgot_my_password"
        android:textSize="15sp"

        app:layout_constraintBottom_toTopOf="@+id/loginSignupButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginToDashboard"
        app:layout_constraintVertical_bias="0.685" />

</androidx.constraintlayout.widget.ConstraintLayout>