<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ADFBF5"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/coreTitle"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:text="@string/core_creator"
        android:textColor="#EF1515"
        android:textSize="45sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="151dp"
        android:layout_height="68dp"
        android:layout_marginBottom="76dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:backgroundTint="@color/design_default_color_primary_variant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="126dp"
        android:layout_height="45dp"
        android:text="@string/signup_button"
        android:textAllCaps="false"
        android:textSize="18sp"

        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:layout_constraintVertical_bias="0.516" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="391dp"
        android:layout_height="406dp"
        android:contentDescription="@string/mainPic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/mainText"
        android:layout_width="384dp"
        android:layout_height="77dp"
        android:gravity="center_horizontal"
        android:text="@string/descriptionText"
        android:textAlignment="center"
        android:textColor="#750909"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coreTitle"
        app:layout_constraintVertical_bias="0.874" />

</androidx.constraintlayout.widget.ConstraintLayout>